@@ -99,7 +99,7 @@ class DatabaseNamespaceManager(OpenResourceNamespaceManager):
             identifier ="databasecontainer/funclock/%s" % self.namespace,
             lock_dir = self.lock_dir)
 
-    def do_open(self, flags):
+    def do_open(self, flags, replace):
         # If we already loaded the data, don't bother loading it again
         if self.loaded:
             self.flags = flags
